# g-embedded-python-interpreter-toolkit

./: .gitignore  .gitmodules  README.md
.vscode-example/: c_cpp_properties.json  launch.json  settings.json
C++/: CMakeLists.txt
C++/include/gepit/: call-function.hpp  gepit.hpp  lv-interop.hpp
C++/src/: call-function.cpp  call-function.hpp  clfn-callbacks.cpp  eval.cpp  exec.cpp  gepit.cpp  interpreter.cpp  lv-interop.cpp  py-object.cpp  py-object.hpp  session.cpp  util.cpp
LabVIEW/: G-Embedded-Python-Interpreter-Toolkit.lvproj  Test IMAQ.vi  Test.vi  iterate-types.vi  offset.vi  test-call.vi
LabVIEW/G-Embedded-Python-Interpreter-Toolkit/: Bad Type Error.vi  Call Class Method.vi  Call Class Method.vim  Call Function (Return Python Object).vi  Call Function ATT.vim  Call Function.vi  Call Function.vim  Call.vi  Call.vim  Call_.vim  Cast Py Object to DBL.vi  Cast Py Object to I32.vi  Cast Py Object to String.vi  Create Py Object IMAQ Image.vi  Create Py Object Int32.vi  Create Session.vi  Destroy Py Object.vi  Destroy Session.vi  Evaluate Expression.vi  Evaluate Script.vi  Execute Statements.vi  Finalize Interpreter.vi  G-Embedded-Python-Interpreter-Toolkit.lvlib  Generate Argument Type Info.vi  Generate Function Call Argument Info.vi  IMAQ Image Pointer.ctl  Init.vi  Initialize Interpreter.vi  Merge Call Library Errors.vi  Null Py Object Refnum.vi  Pointer Sized Ref to Python Object Reference.vi  Print Py Object.vi  Print Session Scope.vi  Python Object Reference to Pointer Sized Ref.vi  Python Object Reference.ctl  Python Object Type.ctl  Read Session Attribute as String.vi  Type Information.ctl  Variant to Type Info.vi
LabVIEW/G-Embedded-Python-Interpreter-Toolkit-IMAQ/: G-Embedded-Python-Interpreter-Toolkit-IMAQ.lvlib  IMAQ to Py Object.vi
LabVIEW/examples/: Calling Class Methods.vi  Passing Arrays as Read-Only ndarrays.vi  counter.py
LabVIEW/test/: .gitignore  Call Class Method.vi  Call Function Array.vi  Call Function with Arrays.vi  Call Function with I32 Python Objects.vi  Call Function with IMAQ Objects.vi  Call Function with No Arguments.vi  Call Function with Python Object Return.vi  Create & Destroy Session.vi  Create and Destroy Session.vi  Evaluate Expression.vi  Evaluate Script and Read Attribute.vi  Execute Statements.vi  Initialize and Finalize.vi  Pass Args as Cluster.vi  Py Object I32.vi  Scope Test.vi  Simple Session Test.vi  Type Info Generation.vi  (+2 more)
(+16 files in other folders)
